spade-tests/src/snapshots/spade_tests__ast_lowering__simple_self_referential_use_lookup_breaks.snap
---
source: spade-tests/src/ast_lowering.rs
---
use x::x;


error: Use of undeclared name x::x
  ┌─ testinput:1:5
  │
1 │ use x::x;
  │     ^^^^ Undeclared name
